--- a/MNIST Data Set/Training_Model.ipynb
+++ b/MNIST Data Set/Training_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,26 +133,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From /Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
       "Epoch 1/5\n",
-      "59808/60000 [============================>.] - ETA: 0s - loss: 0.2991 - acc: 0.8896\n",
-      "Reached loss<0.4 so cancelling training!\n",
-      "60000/60000 [==============================] - 7s 122us/sample - loss: 0.2993 - acc: 0.8896\n"
+      "60000/60000 [==============================] - 8s 130us/sample - loss: 0.4714 - acc: 0.8322\n",
+      "Epoch 2/5\n",
+      "60000/60000 [==============================] - 8s 137us/sample - loss: 0.3598 - acc: 0.8683\n",
+      "Epoch 3/5\n",
+      "60000/60000 [==============================] - 9s 142us/sample - loss: 0.3201 - acc: 0.8824\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 8s 131us/sample - loss: 0.2949 - acc: 0.8917\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 8s 140us/sample - loss: 0.2767 - acc: 0.8964\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x126cdf790>"
+       "<tensorflow.python.keras.callbacks.History at 0x104c7d3d0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,28 +180,28 @@
     "              loss = 'sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(training_images, training_labels, epochs=5, callbacks=[callbacks])"
+    "model.fit(training_images, training_labels, epochs=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 0s 47us/sample - loss: 0.3716 - acc: 0.8695\n"
+      "10000/10000 [==============================] - 1s 60us/sample - loss: 0.3408 - acc: 0.8756\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.37159879143238067, 0.8695]"
+       "[0.34076104328632356, 0.8756]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,70 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.13.1\n",
-      "WARNING:tensorflow:From /Users/conda/opt/anaconda3/envs/tensor/lib/python3.7/site-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 26, 26, 64)        640       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 13, 13, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 11, 11, 64)        36928     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 64)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 1600)              0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               204928    \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 10)                1290      \n",
-      "=================================================================\n",
-      "Total params: 243,786\n",
-      "Trainable params: 243,786\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Epoch 1/5\n",
-      "60000/60000 [==============================] - 32s 540us/sample - loss: 0.4463 - acc: 0.8361\n",
-      "Epoch 2/5\n",
-      "60000/60000 [==============================] - 34s 573us/sample - loss: 0.2969 - acc: 0.8909\n",
-      "Epoch 3/5\n",
-      "60000/60000 [==============================] - 34s 565us/sample - loss: 0.2507 - acc: 0.9068\n",
-      "Epoch 4/5\n",
-      "60000/60000 [==============================] - 35s 585us/sample - loss: 0.2177 - acc: 0.9185\n",
-      "Epoch 5/5\n",
-      "60000/60000 [==============================] - 38s 636us/sample - loss: 0.1933 - acc: 0.9279\n",
-      "10000/10000 [==============================] - 2s 179us/sample - loss: 0.2546 - acc: 0.9090\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "print(tf.__version__)\n",
